--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ crossterm = "0.27"
 rand = "0.8"
 colored = "2.1"
 clap = { version = "4.5", features = ["derive"] }
+sysinfo = "0.32"
+chrono = "0.4"
